--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
     --text-color: white;
-    --bg-url: url(./imgs/teste.png);
+    --bg-url: url(./imgs/fundopreto.png);
     --stroke-color: rgba(255,255,255,0.5);
     --surface-color: rgba(255,255,255,0.1);
     --surface-color-hover: rgba(255,255,255,0.04);
@@ -15,7 +15,7 @@
 
 .light{
     --text-color: black;
-    --bg-url: url(./imgs/claro.png);
+    --bg-url: url(./imgs/fundobranco.png);
     --stroke-color: rgba(0,0,0,0.5);
     --surface-color: rgba(0,0,0,0.05);
     --surface-color-hover: rgba(0,0,0,0.02);
