--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body * {
 
 #container {
     width: 100%;
+    height: 100vh;
     max-width: 588px;
     text-align: center;
     margin: 56px auto 0px;
