--- a/style.css
+++ b/style.css
@@ -84,11 +84,15 @@ body * {
     z-index: 1;
     left: 0;
     transform: translateY(-50%);
+    animation: slide-back 0.4s;
+}
+
+.switch button:hover {
+    outline: 8px solid var(--stroke-color);
 }
 
 .light .switch button {
-    left: initial;
-    right: 0;
+    animation: slide-in 0.4s forwards;
 }
 
 .switch span {
@@ -139,6 +143,24 @@ footer p {
     font-weight: 600;
     font-size: 15px;
     margin-top: 35px;
+}
+
+@keyframes slide-in {
+    from{
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from{
+        left: 50%;
+    }
+    to {
+        left: 0;
+    }
 }
 
 
